--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/* Simple dashboard grid CSS */
 
-/* Assign grid instructions to our parent grid container */
 .grid-container {
     display: grid;
     grid-template-columns: 240px 1fr;
@@ -12,7 +10,7 @@
     height: 100vh;
   }
   
-  /* Give every child element its grid name */
+ 
   .header {
     grid-area: header;
     background-color: #648ca6;
@@ -31,4 +29,22 @@
   .footer {
     grid-area: footer;
     background-color: #648ca6;
+  }
+
+  .sidenav{
+    display: flex;
+    flex-direction: column;
+    grid-area: sidenav;
+    background-color: #394263;
+  }
+
+  .sidenav_list-item{
+    padding: 0;
+    margin-top: 85px;
+    list-style-type: none;
+  }
+
+  .sidenav__list-item:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
   }
