--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@
     background-color: #648ca6;
   }
 
+  .header, .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 16px;
+    background-color: #648ca6;
+  }
+
   .sidenav{
     display: flex;
     flex-direction: column;
