--- a/style.css
+++ b/style.css
@@ -56,3 +56,13 @@
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
   }
+
+  .main-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+    padding: 20px;
+    height: 150px; 
+    background-color: #e3e4e6;
+    color: slategray;
+  }
